frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange-webapp
  labels:
    app: cew-app
spec:
  selector:
    matchLabels:
      app: cew-app
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cew-app
    spec:
      containers:
      - name: currency-exchange-webapp
        image: 152512582646.dkr.ecr.us-east-2.amazonaws.com/currency-exchange-webapp:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
