frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-exchange-webapp
  labels:
    app: cew-app
spec:
  selector:
    app: cew-app
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
    name: cew-app
