frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cew-app
spec:
  backend:
    serviceName: cew-app
    servicePort: 80
